Code refactoring
Update payment api and make payment initialization reference
to account id

Jira ID: FIN-70
Testing done: manually
