# src/main/java/ru/finess/finess/payment/presentation/PaymentsRestApi.java
@@ -4,6 +4,7 @@ import static ru.finess.finess.payment.application.InitializePaymentUseCase.*;
 
 import com.github.sviperll.result4j.Result;
 import java.time.OffsetDateTime;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Supplier;
@@ -15,13 +16,20 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.finess.finess.identity.domain.UserId;
 import ru.finess.finess.payment.application.GettingPaymentInitializationUseCase;
+import ru.finess.finess.payment.application.GettingQrCodeByIdUseCase;
 import ru.finess.finess.payment.application.InitializePaymentUseCase;
+import ru.finess.finess.payment.domain.AccountId;
+import ru.finess.finess.payment.domain.PaymentAmount;
 import ru.finess.finess.payment.domain.PaymentInitialization;
 import ru.finess.finess.payment.domain.PaymentInitializationId;
+import ru.finess.finess.payment.domain.PaymentQrCode;
 import ru.finess.finess.payment.domain.PaymentQrCodeId;
 import ru.finess.finess.payment.presentation.api.PaymentsApi;
+import ru.finess.finess.payment.presentation.dto.AssociationIdDto;
+import ru.finess.finess.payment.presentation.dto.BeaconAssociationIdDto;
 import ru.finess.finess.payment.presentation.dto.PaymentCreationParametersDto;
 import ru.finess.finess.payment.presentation.dto.PaymentInitializationTaskDto;
+import ru.finess.finess.payment.presentation.dto.QrCodeAssociationIdDto;
 
 @RestController
 @RequestMapping("/api/payment")
@@ -31,17 +39,30 @@ public class PaymentsRestApi implements PaymentsApi {
   private final Supplier<Optional<UserId>> currentUserSupplier;
   private final InitializePaymentUseCase initializePaymentUseCase;
   private final GettingPaymentInitializationUseCase gettingPaymentInitializationUseCase;
+  private final GettingQrCodeByIdUseCase gettingQrCodeByIdUseCase;
   private final ConversionService conversionService;
 
   @Override
   public ResponseEntity<PaymentInitializationTaskDto> createPaymentInitializationTask(
-      PaymentCreationParametersDto paymentCreationParametersDto) {
+      PaymentCreationParametersDto parameters) {
     UserId currentUser =
         currentUserSupplier
             .get()
             .orElseThrow(() -> new SecurityException("Current user is not authenticated"));
 
-    return initializePayment(paymentCreationParametersDto, currentUser)
+    AssociationIdDto associationId = parameters.getAssociationId();
+    Result<Map.Entry<AccountId, PaymentAmount>, HttpStatus> paymentInfoResult =
+        switch (associationId) {
+          case BeaconAssociationIdDto ignored ->
+              throw new UnsupportedOperationException("Not supported yet");
+          case QrCodeAssociationIdDto dto ->
+              findQrCodeId(dto.getQrCodeId())
+                  .map(qrCode -> Map.entry(qrCode.accountId(), qrCode.amount()));
+          default -> throw new IllegalStateException("Unexpected value: " + associationId);
+        };
+
+    return paymentInfoResult
+        .flatMap(paymentInfo -> initializePayment(paymentInfo, currentUser))
         .map(this::toDto)
         .map(ResponseEntity::ok)
         .recoverError(error -> ResponseEntity.status(error).build());
@@ -65,19 +86,24 @@ public class PaymentsRestApi implements PaymentsApi {
         .recoverError(error -> ResponseEntity.notFound().build());
   }
 
+  private Result<PaymentQrCode, HttpStatus> findQrCodeId(String qrCodeId) {
+    PaymentQrCodeId qrCodeId1 = new PaymentQrCodeId(qrCodeId);
+    GettingQrCodeByIdUseCase.Parameters parameters =
+        new GettingQrCodeByIdUseCase.Parameters(qrCodeId1);
+    return gettingQrCodeByIdUseCase.execute(parameters).mapError(notFound -> HttpStatus.NOT_FOUND);
+  }
+
   private Result<PaymentInitialization, HttpStatus> initializePayment(
-      PaymentCreationParametersDto paymentCreationParametersDto, UserId currentUser) {
+      Map.Entry<AccountId, PaymentAmount> accountAmount, UserId currentUser) {
     Parameters parameters =
         new Parameters(
-            currentUser,
-            new PaymentQrCodeId(paymentCreationParametersDto.getQrCodeId()),
-            OffsetDateTime.now());
+            currentUser, accountAmount.getKey(), accountAmount.getValue(), OffsetDateTime.now());
     return initializePaymentUseCase
         .execute(parameters)
         .mapError(
             error ->
                 switch (error) {
-                  case Errors.QrCodeNotFound ignored -> HttpStatus.NOT_FOUND;
+                  case Errors.AccountNotFound ignored -> HttpStatus.NOT_FOUND;
                   case Errors.UserNotFound ignored -> HttpStatus.UNAUTHORIZED;
                 });
   }
